Check in with Load More button

--- a/res/layout/activity_timeline.xml
+++ b/res/layout/activity_timeline.xml
@@ -7,9 +7,12 @@
     <ListView
         android:id="@+id/lvTweets"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true" >
-    </ListView>
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true" >
 
+    </ListView>
+    
+     
+    
+ 
 </RelativeLayout>
