--- a/res/menu/timeline.xml
+++ b/res/menu/timeline.xml
@@ -1,10 +1,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
    <item
-        android:id="@+id/miSettings"
+        android:id="@+id/miCompose"
         android:icon="@drawable/ic_compose"
         android:showAsAction="always"
-        android:onClick="onComposeAction"
         android:title="Compose">
     </item>
+     <item
+        android:id="@+id/miProfile"
+        android:icon="@drawable/ic_profile"
+        android:showAsAction="always"
+        android:title="Profile">
+    </item>
+   
 </menu>
